feat: can create a user via the api
users no longer have to be associated with an account.
