# src/controllers/users/index.ts
@@ -1,0 +1,5 @@
+import CreateUser from './CreateUser';
+
+export default {
+  CreateUser,
+};
